compiler/tests/en/errors/pure_write_param.salam
// EXPECT: E013
pure func poke(p: i64*, v: i64): i64:
    p[0] = v
    ret v
end

func main:
    mut slot := 0 as i64
    println slot
end
